# WatchDog

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
scripts/: build_nuitka.cmd  build_nuitka.ps1  build_pyinstaller.cmd  build_pyinstaller.ps1
src/watchdog_app/: __init__.py  app.py  autostart.py  checkers.py  launchers.py  logging_utils.py  main.py  models.py  monitor.py  runtime.py  single_instance.py  storage.py  supervisor.py
src/watchdog_app/gui/: __init__.py  dialogs.py  main_window.py
tests/: test_app.py  test_autostart.py  test_checkers.py  test_direct_script_entry.py  test_launchers.py  test_logging_utils.py  test_models.py  test_monitor.py  test_runtime.py  test_single_instance.py  test_storage.py  test_supervisor.py  test_ui.py
tests/helpers/: demo_process.py
