[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "watchdog-app"
version = "0.1.0"
description = "Windows-first watchdog tray application built with PySide6."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "PySide6>=6.11,<6.12",
  "psutil>=7.0,<8.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9.0",
  "pytest-qt>=4.4,<5.0",
]

[project.scripts]
watchdog-app = "watchdog_app.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
watchdog_app = ["assets/icons/*.ico"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
qt_api = "pyside6"
